--- a/notebooks/00get_data.ipynb
+++ b/notebooks/00get_data.ipynb
@@ -9,30 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir('..')\n",
-    "sys.path.append(os.getcwd() + '/src/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import sys\n",
     "import json\n",
     "import config\n",
     "import requests\n",
@@ -42,12 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = config.API_KEY\n",
-    "URL = config.URL"
+    "os.chdir('..')\n",
+    "sys.path.append(os.getcwd() + '/src/')"
    ]
   },
   {
@@ -66,16 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "API_KEY = config.API_KEY\n",
+    "URL = config.URL\n",
     "SERIES_URL = URL.format(series_id='CPIAUCSL', api_key=API_KEY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,45 +83,33 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>realtime_start</th>\n",
-       "      <th>realtime_end</th>\n",
        "      <th>date</th>\n",
-       "      <th>value</th>\n",
+       "      <th>CPI</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-10-14</td>\n",
-       "      <td>2021-10-14</td>\n",
        "      <td>1947-01-01</td>\n",
        "      <td>21.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2021-10-14</td>\n",
-       "      <td>2021-10-14</td>\n",
        "      <td>1947-02-01</td>\n",
        "      <td>21.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2021-10-14</td>\n",
-       "      <td>2021-10-14</td>\n",
        "      <td>1947-03-01</td>\n",
        "      <td>22.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2021-10-14</td>\n",
-       "      <td>2021-10-14</td>\n",
        "      <td>1947-04-01</td>\n",
        "      <td>22.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2021-10-14</td>\n",
-       "      <td>2021-10-14</td>\n",
        "      <td>1947-05-01</td>\n",
        "      <td>21.95</td>\n",
        "    </tr>\n",
@@ -146,15 +118,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  realtime_start realtime_end        date  value\n",
-       "0     2021-10-14   2021-10-14  1947-01-01  21.48\n",
-       "1     2021-10-14   2021-10-14  1947-02-01  21.62\n",
-       "2     2021-10-14   2021-10-14  1947-03-01   22.0\n",
-       "3     2021-10-14   2021-10-14  1947-04-01   22.0\n",
-       "4     2021-10-14   2021-10-14  1947-05-01  21.95"
+       "         date    CPI\n",
+       "0  1947-01-01  21.48\n",
+       "1  1947-02-01  21.62\n",
+       "2  1947-03-01   22.0\n",
+       "3  1947-04-01   22.0\n",
+       "4  1947-05-01  21.95"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +134,25 @@
    "source": [
     "r = requests.get(SERIES_URL)\n",
     "cpi_df = pd.DataFrame(r.json()['observations'])\n",
+    "cpi_df = cpi_df[['date', 'value']]\n",
+    "cpi_df.rename(columns={'value': 'CPI'}, inplace=True)\n",
     "cpi_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write to File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpi_df.to_csv(os.getcwd() + '/data/CPI.csv', index=False)"
    ]
   }
  ],
