Improved data download script to download multiple series

--- a/notebooks/00get_data.ipynb
+++ b/notebooks/00get_data.ipynb
@@ -16,7 +16,6 @@
     "import os\n",
     "import sys\n",
     "import json\n",
-    "import config\n",
     "import requests\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -36,14 +35,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Downloading the CPI"
+    "## Downloading the series datasets"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Series ID: CPIAUCSL"
+    "The config file has the mapping containing the name and ID of the series data to be downloaded from the FRED."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import config"
    ]
   },
   {
@@ -54,105 +62,14 @@
    "source": [
     "API_KEY = config.API_KEY\n",
     "URL = config.URL\n",
-    "SERIES_URL = URL.format(series_id='CPIAUCSL', api_key=API_KEY)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>CPI</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1947-01-01</td>\n",
-       "      <td>21.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1947-02-01</td>\n",
-       "      <td>21.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1947-03-01</td>\n",
-       "      <td>22.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1947-04-01</td>\n",
-       "      <td>22.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1947-05-01</td>\n",
-       "      <td>21.95</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date    CPI\n",
-       "0  1947-01-01  21.48\n",
-       "1  1947-02-01  21.62\n",
-       "2  1947-03-01   22.0\n",
-       "3  1947-04-01   22.0\n",
-       "4  1947-05-01  21.95"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r = requests.get(SERIES_URL)\n",
-    "cpi_df = pd.DataFrame(r.json()['observations'])\n",
-    "cpi_df = cpi_df[['date', 'value']]\n",
-    "cpi_df.rename(columns={'value': 'CPI'}, inplace=True)\n",
-    "cpi_df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Write to File"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cpi_df.to_csv(os.getcwd() + '/data/CPI.csv', index=False)"
+    "\n",
+    "for k,v in config.SERIES_DATA.items():\n",
+    "    SERIES_URL = URL.format(series_id=v, api_key=API_KEY)\n",
+    "    r = requests.get(SERIES_URL)\n",
+    "    series_df = pd.DataFrame(r.json()['observations'])\n",
+    "    series_df = series_df[['date', 'value']]\n",
+    "    series_df.rename(columns={'value': v}, inplace=True)\n",
+    "    series_df.to_csv(os.getcwd() + '/data/{fname}.csv'.format(fname=k), index=False)"
    ]
   }
  ],
